FIX - Changed MRU implementation, now based on ArrayList so that you may return it (a fresh and up-to-date copy). To keep consistency in the listview.